# EEG_Drowsiness

./: .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_python  .graphify_uncached.txt  Cargo.toml  README.md  Rust_vs_C_Embedded.pptx  build.rs  check.txt  check_err.txt  graph TD.mmd  make_slides.js  memory.x  reader.py
.cargo/: config.toml
graphify-out/: .graphify_chunk_01.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/: alert.rs  deadman.rs  eeg_sensor.rs  hc05.rs  i2c.rs  led.rs  logger.rs  main.rs  sequenceDiagram.mmd  speed_sensor.rs  stateDiagram-v2.mmd  touch.rs  uart.rs
