[package]
name = "eeg_drowsiness_detection"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
stm32f4xx-hal = { version = "0.21.0", features = ["stm32f429"] }
panic-halt = "0.2.0"
heapless = "0.8"
rtt-target = "0.5"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
